# pose-detection

./: Cargo.toml
src/: main.rs  pose_detection.rs
src/pose_detection/: yolo_v8.rs
